--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
    <meta charset="utf-8">
    <title>Project 2 — JavaScript and P5</title>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+   <script src="sketch.js"></script>
+
 </head>
-<body></body>
+<body>
+  <h1> White Tiger </h1>
+  <h2> Brenden Alexander Wong </h2>
+</body>
 </html>
