Revert "Update index.html"
This reverts commit 92d4e0821a6f9a8a5d95156d49e55450035b1afc.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
 <head>
    <meta charset="utf-8">
    <title>Project 2 — JavaScript and P5</title>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-   <script src="sketch.js"></script>
-
 </head>
-<body>
-  <h1> White Tiger </h1>
-  <h2> Brenden Alexander Wong </h2>
-</body>
+<body></body>
 </html>
